# neural-networks-and-deep-learning

./: .gitignore  pyproject.toml
fig/: generate_gradient.py  initial_gradient.json  mnist.py  more_data.py  multiple_eta.py  norms_during_training_2_layers.json  norms_during_training_3_layers.json  norms_during_training_4_layers.json  overfitting.py  weight_initialization.py
src/: mnist_loader.py  network3.py
src/network_1/: generate_gradient.py  network.py
src/network_2/: generate_gradient.py  network2.py
